<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.screens.GalleryScreenFragment"
    android:background="@color/screensBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/firstGalleryImageCV"
        android:layout_width="131.25dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/firstGalleryImageIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/first_gallery_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/secondGalleryImageCV"
        android:layout_width="131.25dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/secondGalleryImageIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/second_gallery_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/thirdGalleryImageCV"
        android:layout_width="131.25dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/secondGalleryImageCV"
        app:layout_constraintStart_toEndOf="@+id/firstGalleryImageCV"
        app:layout_constraintTop_toBottomOf="@+id/firstGalleryImageCV">

        <ImageView
            android:id="@+id/thirdGalleryImageIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/third_gallery_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>